added mail service and bcrypt

--- a/EcoTrack/src/main/resources/application.properties
+++ b/EcoTrack/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=EcoTrack
-server.port=8080
+server.port=8070
 
 spring.data.mongodb.uri=mongodb+srv://vemanajayakrishnachandra:JN3K2XS5TpwW7JE7@cluster0.sr8th.mongodb.net
 spring.data.mongodb.database=EcoTrack
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jayakrishnachandra.ecotrack@gmail.com
+spring.mail.password=voxk knbn sgio zqrw
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
